# Automata-Theory

./: .gitignore
Lab1/: AnalysisResults.txt  CMakeLists.txt  README.md  benchmark_results.txt
Lab1/include/: ArrayGenerator.hpp  InvalidArrayGenerator.hpp
Lab1/include/DifRecog/: FlexRecog.hpp  IMyRecognizer.hpp  RegexRecog.hpp  SmcRecog.hpp  SmcRecog.sm  SmcRecog_sm.cpp  SmcRecog_sm.h  lexer.l
Lab1/src/: analiser.cpp  main.cpp
Lab2/: CMakeLists.txt  KNOWN_ISSIUES.md  README.md  main.cpp  test.cpp
Lab2/ast/: ast.cpp  ast.hpp
Lab2/automaton/: automaton.cpp  automaton.hpp
Lab2/parser/: parser.cpp  parser.hpp
Lab2/regex/: regex.cpp  regex.hpp
Lab3/: Makefile  README.md  ast.c  ast.h  context.h  find.dsl  findDslOut.txt  interp.c  interp.h  main.c  maze.c  maze.h  maze.txt  robot_lang.l  robot_lang.y  test.dsl  testDslOut.txt
